# compiler

./: .gitignore  CMakeLists.txt  README.md
include/cminusfc/: cminusf_builder.hpp
include/codegen/: CodeGen.hpp
src/: CMakeLists.txt  main.cpp  test_logging.cpp
src/cminusfc/: CMakeLists.txt  cminusf_builder.cpp  main.cpp
src/codegen/: CodeGen.cpp
src/common/: ast.cpp  syntax_tree.c
src/parser/: syntax_analyzer.y
src/passes/: Dominators.cpp  LICM.cpp  LoopDetection.cpp  Mem2Reg.cpp
tests/2-ir-gen/autogen/testcases/lv0_1/: test  test.ll
tests/2-ir-gen/warmup/stu_cpp/: assign_generator.cpp  fun_generator.cpp  if_generator.cpp  while_generator.cpp
tests/2-ir-gen/warmup/stu_ll/: assign_hand.ll  fun_hand.ll  if_hand.ll  while_hand.ll
tests/2-ir-gen/warmup/ta_gcd/: test.ll
tests/3-codegen/autogen/: log.txt
tests/3-codegen/autogen/output/: 0-io  1-return  10-float  10-float.s  10-funcall  11-floatcall  11-floatcall.s  11-funcall_chain  12-funcall_recursion  12-funcall_recursion.s  12-global  12-global.s  13-complex  13-complex.s  13-if_stmt  13-if_stmt.s  14-while_stmt  14-while_stmt.s  15-if_while  15-if_while.s  16-if_chain  16-if_chain.s  17-while_chain  17-while_chain.s  18-global_var  19-global_local_var  2-calculate  2-decl_int  20-gcd_array  20-gcd_array.s  21-comment  3-decl_float  3-output  4-decl_int_array  4-if  4-if.s  5-decl_float_array  5-while  5-while.s  6-array  (+11 more)
tests/3-codegen/warmup/stu_cpp/: assign_codegen.cpp  fcmp_codegen.cpp  float_codegen.cpp  icmp_codegen.cpp
tests/4-opt/: eval_lab4.sh  test_perf.sh
